--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,12 @@ dependencies {
     testCompile('org.assertj:assertj-core:1.7.0')
     testCompile('org.slf4j:slf4j-simple:1.7.7')
     testCompile "org.postgresql:postgresql:9.4-1201-jdbc41"
+    
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-io
+	compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+	
+    
 }
 // compilando com UTF-8
 tasks.withType(JavaCompile) {
